# Arkanoid

./: .gitmodules  CMakeLists.txt  README.md
assets/: ball.frag  brick.frag  brick.vert  round.frag  simple.vert
src/: Application.cpp  Application.h  BallGO.cpp  BallGO.h  BrickGO.cpp  BrickGO.h  CMakeLists.txt  FileWatcher.h  GameObject.cpp  GameObject.h  MyApp.cpp  MyApp.h  PlatformGO.cpp  PlatformGO.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp  utils.h
